# fastapi-vue-docker-devcontainer

./: .env.example  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  post-install.sh
.devcontainer_new/: Dockerfile
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
frontend/: Dockerfile
