[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.112.0"}
uvicorn = "^0.30.5"
neo4j = "^5.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
